Update swagger for review.
